# trafalgar_operator_v0

./: comp.py  compare.py  gstPlayergui.py  package.xml  setup.cfg  setup.py  vlcGui.py
archive/: __videostream.py
datas/: figures.json
launch/: device_0_launch.py  device_1_launch.py  device_launch.py  operator_0_launch.py  operator_1_launch.py  operator_launch.py
naviscope/archives/: __imu_view.py  __save_contr.py  imu_save.py
naviscope/components/: __audioManager.py  __btn_propulsion.py  __gstPlayer.py  __microcontroller.py  __pushHoldBtn.py  __rot_orientation.py  __rotaryEncoder.py  __streamNode.py  __userInterface.py  __userInterfaceOp.py  __videoPlayer.py  __videostream.py  debug.py
naviscope/nodes/: __controller.py  __gui.py  __heartbeats.py  __imu.py  __tkinterVideo.py  __videostream.py  gui_save.py
naviscope/utils/: __utils_objects.py
scripts/: vocal_transcript_fr.txt
service/foxy/: trafalgar.service  trafalgar_0.service
service/humble/: trafalgar.service  trafalgar_0.service
service/unclutter/: cursorHide.service
sketch/: NaviscopeController.ino
