<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>naviscope</name>
  <version>0.0.1</version>
  <description>base nodes for the operator</description>
  <maintainer email="contact@manoar.com">ManOAR</maintainer>
  <license>Apache 2.0</license>
  
  <!-- Dépendances de test (dans test_package.xml) -->
  <!--
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
    -->


  <!-- Dépendances de construction -->
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Dépendances d'exécution -->

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <install>
    <file>
      <install_path>share/${PROJECT_NAME}/media</install_path>
      <install_condition><test>EXISTS</test></install_condition>
      <exec_depend>ros2pkg</exec_depend>
    </file>
  </install>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
